Updated the backend and debugged some errors.